--- a/package.json
+++ b/package.json
@@ -1,39 +1,66 @@
 {
-  "name": "app-name",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.8",
-    "@angular/cli": "~12.2.8",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
-  }
+    "name": "app-name",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "lint": "ng lint"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged --relative"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "eslint --fix"
+        ]
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.2.0",
+        "@angular/common": "~12.2.0",
+        "@angular/compiler": "~12.2.0",
+        "@angular/core": "~12.2.0",
+        "@angular/forms": "~12.2.0",
+        "@angular/platform-browser": "~12.2.0",
+        "@angular/platform-browser-dynamic": "~12.2.0",
+        "@angular/router": "~12.2.0",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.2.8",
+        "@angular-eslint/builder": "12.7.0",
+        "@angular-eslint/eslint-plugin": "12.7.0",
+        "@angular-eslint/eslint-plugin-template": "12.7.0",
+        "@angular-eslint/schematics": "12.7.0",
+        "@angular-eslint/template-parser": "12.7.0",
+        "@angular/cli": "~12.2.8",
+        "@angular/compiler-cli": "~12.2.0",
+        "@types/jasmine": "~3.8.0",
+        "@types/node": "^12.11.1",
+        "@typescript-eslint/eslint-plugin": "^4.28.2",
+        "@typescript-eslint/parser": "4.28.2",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^7.0.4",
+        "jasmine-core": "~3.8.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "lint-staged": "^12.4.1",
+        "prettier": "^2.6.2",
+        "typescript": "~4.3.5"
+    }
 }
