--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged --relative"
+            "pre-commit": "ng lint",
+            "commit-msg": "npx commitlint --edit $1"
         }
     },
     "lint-staged": {
