feat: update husky

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "ng lint",
-            "commit-msg": "npx commitlint --edit $1"
+            "pre-commit": "ng lint"
         }
     },
     "lint-staged": {
@@ -53,7 +52,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "husky": "^7.0.4",
+        "husky": "^4.3.8",
         "jasmine-core": "~3.8.0",
         "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
