--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,8 +48,22 @@
                 "import/no-unresolved": "off",
                 "class-methods-use-this": "off",
                 "lines-between-class-members": "off",
+                "@typescript-eslint/lines-between-class-members": [
+                    "error"
+                ],
+                //                "lines-between-class-members": [
+                //                    "error",
+                //                    "never",
+                //                    {
+                //                        "exceptAfterSingleLine": true
+                //                    }
+                //                ],
                 "no-restricted-syntax": "off",
                 "regenerator-runtime": "off",
+                "@typescript-eslint/no-unsafe-return": "error",
+                "@typescript-eslint/explicit-module-boundary-types": [
+                    "error"
+                ],
                 "@typescript-eslint/dot-notation": [
                     "off"
                 ],
