feat: add aoi url heroku

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
         "paths": {
             "@modules/*": [
                 "src/app/modules/*"
+            ],
+            "@shared/*": [
+                "src/app/shared/*"
+            ],"@service/*": [
+                "src/app/services/*"
             ]
         }
     },
