--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,9 @@
             "root": "",
             "sourceRoot": "src",
             "prefix": "app",
+            "i18n": {
+                "sourceLocale": "en-US"
+            },
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
@@ -26,15 +29,14 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "localize": true,
+                        "aot": true
                     },
                     "configurations": {
                         "production": {
@@ -65,6 +67,9 @@
                             "extractLicenses": false,
                             "sourceMap": true,
                             "namedChunks": true
+                        },
+                        "en-US": {
+                            "localize": ["en-US"]
                         }
                     },
                     "defaultConfiguration": "production"
@@ -78,6 +83,9 @@
                         },
                         "development": {
                             "browserTarget": "appName:build:development"
+                        },
+                        "en-US": {
+                            "browserTarget": "appName:build:en-US"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -96,10 +104,7 @@
                         "tsConfig": "tsconfig.spec.json",
                         "karmaConfig": "karma.conf.js",
                         "inlineStyleLanguage": "scss",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.scss"
@@ -110,10 +115,7 @@
                 "lint": {
                     "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "lintFilePatterns": [
-                            "src/**/*.ts",
-                            "src/**/*.component.html"
-                        ]
+                        "lintFilePatterns": ["src/**/*.ts", "src/**/*.component.html"]
                     }
                 }
             }
