--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,10 @@
             "sourceRoot": "src",
             "prefix": "app",
             "i18n": {
-                "sourceLocale": "en-US"
+                "sourceLocale": "en-US",
+                "locales": {
+                    "ru": "src/locale/messages.ru.xlf"
+                }
             },
             "architect": {
                 "build": {
